# dria-workflows

./: .coverage  .gitignore  README.md  pyproject.toml  pytest.ini
dria_workflows/: __init__.py  coder.json  main.py  validate.py
dria_workflows/workflows/: __init__.py  builder.py  interface.py  io.py  tools.py  w_types.py  workflow.py
dria_workflows/workflows/tools/: __init__.py  builder.py
dria_workflows/workflows/tools/parsers/: __init__.py  base.py  llama.py  nous.py  openai.py
tests/: test_workflow_builder.py
