[tool.poetry]
name = "dria_workflows"
version = "0.1.0"
description = "Enables creation of workflows for Dria Agents"
authors = ["andthattoo <omer@firstbatch.xyz>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jsonschema = "^4.23.0"
pydantic = "^2.8.2"

[tool.poetry.scripts]
dev = "dria_workflows.main:main"
temp = "dria_workflows.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
